CB-28177 migrate from OpenSSL-Provider and plain BouncyCastle to BouncyCastle-FIPS on top of new chainguard images